--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
     <groupId>com.mgs</groupId>
     <artifactId>mgs-api</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <description>API MGS</description>
 
     <properties>
